# opd_project_template

./: README.md  cookiecutter.json
.github/agents/: code-reviewer.agent.md  task-implementor.agent.md
.github/workflows/: generate_basic_repo.yml  generate_oca_repo.yml  generate_repo.yml
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: build_release.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.module_name}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_cli.py
