[build-system]
requires = ["setuptools>=80", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.project_slug }}"
description = "{{ cookiecutter.description }}"
authors = [{name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: {{ cookiecutter.python_requires }}",
]
dynamic = ["version"]
requires-python = ">={{ cookiecutter.python_requires }}"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3"
]

[project.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.module_name }}.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/{{ cookiecutter.module_name }}/_version.py"
fallback_version = "0.1.0"

[tool.ruff]
line-length = 100
target-version = "py{{ cookiecutter.python_requires | replace('.', '') }}"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
